fix display on small screen remove useless content

--- a/theme/basic/static/css/style.css
+++ b/theme/basic/static/css/style.css
@@ -54,20 +54,15 @@ h6 a { color: inherit !important }
 }
 
 .hlist {
-  padding: 0;
-  margin: 0;
   display: flex;
-  width: 100%;
+  flex-wrap: wrap;
+  padding: 0; margin: 0;
 }
 
 .hlist li {
   list-style-type: none;
   padding: 5px;
-  width: 100%; /* auto spacing */
-}
-
-@media screen and (max-width: 768px) {
-  .hlist li { width: 25%; }
+  width: 8%;
 }
 
 #post-list {
